--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-asgiref @ file:///tmp/build/80754af9/asgiref_1625643473416/work
+asgiref==3.4.1
 certifi==2021.10.8
 cycler==0.11.0
-Django @ file:///tmp/build/80754af9/django_1625585912945/work
+Django==3.2.5
 django-next-prev==1.1.0
 django-tables2==2.4.1
 django-tinymce==3.3.0
@@ -13,15 +13,18 @@ numpy==1.21.4
 packaging==21.3
 pandas==1.3.4
 Pillow==8.4.0
+pip==21.2.2
 plotly==5.4.0
-psycopg2 @ file:///C:/ci/psycopg2_1612298803839/work
+psycopg2==2.8.6
 pyparsing==3.0.6
 python-dateutil==2.8.2
 pytz==2021.3
 scipy==1.7.3
 seaborn==0.11.2
+setuptools==58.0.4
 six==1.16.0
-sqlparse @ file:///tmp/build/80754af9/sqlparse_1602184451250/work
+sqlparse==0.4.1
 tenacity==8.0.1
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
+typing-extensions==3.10.0.2
+wheel==0.37.0
 wincertstore==0.2
